Kubernetes/config-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server-deployment
  labels:
    app: config-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
      - name: config-server
        image: pamoussa/config-server:latest
        ports:
        - containerPort: 9101
