Kubernetes/config-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-server-service
spec:
  selector:
    app: config-server
  ports:
    - protocol: TCP
      port: 9101
      targetPort: 9101
  type: NodePort
