Kubernetes/mproduits-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: produits-service
spec:
  selector:
    app: microservice-produits
  ports:
    - protocol: TCP
      port: 9001
      targetPort: 9001
  type: NodePort
